# knowledge_search

./: '  .gitignore  Cargo.toml  readme.md
benches/: my_benchmark.rs
src/: indexer.rs  lexer.rs  lib.rs  threadpool.rs
src/model/: base.rs  invertedmodel.rs  json_model.rs  mod.rs
src/parser/: docx.rs  error.rs  html.rs  mod.rs  pdf.rs  txt.rs
src/tui/: mod.rs
