[package]
name = "knowledge_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
crossterm = "0.27.0"
ctrlc = "3.4.2"
docx-rust = "0.1.5"
html2text = "0.8.0"
notify = "6.1.1"
open = "5.0.1"
pdf-extract = "0.7.2"
ratatui = "0.25.0"
rust-stemmers = "1.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
xml-rs = "0.8.19"
zip = "0.6.6"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3.18"
rayon = "1.8"
dhat = "0.3.2"


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
debug = 1


[features]
dhat-heap = []
